--- a/src/app/components/main-view/main-page/main-page.component.html
+++ b/src/app/components/main-view/main-page/main-page.component.html
@@ -43,7 +43,7 @@
           <p class="card-text">You can also choose to keep track of other expenses, such as fuel, rent, entertainment expenses and others.</p>
           <div class="btn-group-vertical mt-3 mb-5">
             <a routerLink="../add-expense" class="btn btn-primary btn-lg mb-2 fw-bold" role="button">Add New Expense</a>
-            <a routerLink="../manage-expenses" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">Manage Expenses</a>
+            <a routerLink="../manage-expenses" class="btn btn-primary btn-lg mt-2 fw-bold" role="button">View Expense Statistics</a>
           </div>
           <br>
           <p class="card-text"><small class="text-muted"></small></p>
