--- a/src/app/components/main-view/receipt-form/receipt-form.component.html
+++ b/src/app/components/main-view/receipt-form/receipt-form.component.html
@@ -13,8 +13,8 @@
 
         </div>
 
-        <div class="col-sm-4 text-center fw-bold">
-          <h4>
+        <div class="col-sm-4 text-center">
+          <h4 class="fw-bold">
             New Receipt
           </h4>
         </div>
