--- a/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.html
+++ b/src/app/components/main-view/main-navbar/due-invoices-dialog/due-invoices-dialog.component.html
@@ -5,7 +5,7 @@
 
   <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isError">{{errorMessage}}</h1>
 
-  <h1 mat-dialog-title class="fw-bold text-center error-message" *ngIf="isSuccess">{{successMessage}}</h1>
+  <h1 mat-dialog-title class="fw-bold text-center" *ngIf="isSuccess">{{successMessage}}</h1>
 
   <div mat-dialog-content class="dialog-content">
 
@@ -21,7 +21,7 @@
   </div>
 
   <div mat-dialog-actions class="dialog-actions" align="center" *ngIf="isSuccess">
-    <button mat-button class="btn btn-primary fw-bold" (click)="closeDialog()">Ok</button>
+    <button mat-button class="btn btn-primary fw-bold" (click)="onNoClick()">Ok</button>
   </div>
 
 </div>
