Added phone number for user

--- a/src/app/components/main-view/manage-account/manage-account.component.html
+++ b/src/app/components/main-view/manage-account/manage-account.component.html
@@ -34,7 +34,14 @@
       <div class="form-floating mb-3">
         <input type="email" class="form-control mb-3" id="input-email" name="input-email"
                formControlName="email" placeholder="Enter your email address...">
-        <label for="input-email">Email address</label>
+        <label for="input-email">Email Address</label>
+      </div>
+
+      <hr style="color: white">
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control mb-3" id="input-phone-number" name="input-phone-number"
+               formControlName="phoneNumber" placeholder="Enter your phone number...">
+        <label for="input-phone-number">Phone Number</label>
       </div>
 
       <hr style="color: white">
