--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,8 +10,8 @@
 
     <header class="p-2">
       <img src="assets/images/small-logo.png" alt="small-logo.png">
-      <h1>RecycleIT</h1>
-      <p>Create an account and make your way towards <strong>helping the planet!</strong></p>
+      <h1>Budget Management App</h1>
+      <p>Create an account and start <strong>taking control over your budget!</strong></p>
     </header>
 
     <div class="loading-spinner" *ngIf="isLoading">
@@ -76,7 +76,7 @@
       <small class="error-message fw-bold"
              *ngIf="showPasswordError">
         Invalid password!<br>
-        The length of the password must be at least 8 characters!
+        The length of the password must be at least 8 characters long!
       </small>
       <hr style="color: white">
       <div class="form-floating mb-3">
